[package]
name = "javd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
